# Ebal_ya_vash_QT

./: .gitignore  CMakeLists.txt  main.cpp
